# scratch

./: CMakeLists.txt  LICENSE  README
etc/cmake/: CollectSourceFiles.cmake  FindLog4cplus.cmake  FindLuabind.cmake  FindXercesC3.cmake
lua/: CMakeLists.txt
lua/tests/: test_math_serialization_deserialization.lua  test_math_string_conversions.lua
src/: CMakeLists.txt
src/bootstrap/: CMakeLists.txt  main.cc
src/graphic/: CMakeLists.txt  animated_mesh.cc  animated_mesh.h  animated_model.cc  animated_model.h  animation.h  bind.cc  bind.h  camera.cc  camera.h  collada_loader.cc  collada_loader.h  collada_loader_bind.cc  d3d9_draw_call.cc  d3d9_draw_call.h  d3d9_index_buffer.cc  d3d9_index_buffer.h  d3d9_material.cc  d3d9_material.h  d3d9_renderer.cc  d3d9_renderer.h  d3d9_shader.cc  d3d9_shader.h  d3d9_texture.cc  d3d9_texture.h  d3d9_uber_draw_call.cc  d3d9_uber_draw_call.h  d3d9_vertex_buffer.cc  d3d9_vertex_buffer.h  d3d9_vertex_declarations.cc  d3d9_vertex_declarations.h  directx_error.h  draw_call.cc  draw_call.h  font.cc  font.h  forward.h  generic_vertex.h  index.h  index_array.cc  (+66 more)
src/math/: CMakeLists.txt  a_star.cc  a_star.h  aabb.cc  aabb.h  bind.cc  bind.h  bresenham_supercover.cc  bresenham_supercover.h  capsule.cc  capsule.h  collision.h  contact_info.cc  contact_info.h  frustum.cc  frustum.h  heightfield.cc  heightfield.h  interval.cc  interval.h  line.cc  line.h  matrix.cc  matrix.h  obb.cc  obb.h  plane.cc  plane.h  quaternion.h  ray.cc  ray.h  scalar.h  sphere.cc  sphere.h  test_a_star.cc  test_aabb.cc  test_bresenham_supercover.cc  test_capsule.cc  test_collision.cc  test_frustum.cc  (+12 more)
src/rpc/: CMakeLists.txt  basic_service.cc  basic_service.h  buffer.h  client.cc  client.h  client_service.cc  client_service.h  connection.cc  connection.h  handler.h  header.h  server_service.cc  server_service.h  test_buffer.cc  test_main.cc  test_service.cc
src/spatial/: CMakeLists.txt  bind.cc  bind.h  capsule_shape.cc  capsule_shape.h  line_shape.cc  line_shape.h  octree.cc  octree.h  octree_bind.cc  result_set.cc  result_set.h  shape.cc  shape.h  sphere_shape.cc  sphere_shape.h  test_octree.cc
src/test_lua/: CMakeLists.txt  main.cc
src/util/: CMakeLists.txt  archive.cc  archive.h  archive_bind.cc  bind_boost.cc  bind_boost.h  bind_sdl.cc  bind_sdl.h  bind_stl.cc  bind_stl.h  boost_com_intrusive_ptr.h  get_sources_path.cc  get_sources_path.h  logger.cc  logger.h  lua_state.cc  lua_state.h  test_archive.cc  test_main.cc  xerces_lcp_transcoder.h
